force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Acceptance_Status__c</fullName>
    <label>Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>