force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Category__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipName>Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>