force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Client_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Client_Product_Code__c</fullName>
    <label>Client Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>