force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Ext_Synchro_Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ext_Synchro_Status__c</fullName>
    <label>External Synchro Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extract</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>