force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Extraction_Date_last__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Extraction_Date_last__c</fullName>
    <label>Last Extraction Date</label>
    <type>Date</type>
</CustomField>