force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__FlatPrice__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__FlatPrice__c</fullName>
    <formula>Negoptim__New_NetPrice_wTax__c * (1 - Negoptim__FlatPrice_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlatPrice</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>