force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__IsMaster_Higher_Level_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsMaster_Higher_Level_Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMaster Higher Level Packaging</label>
    <type>Checkbox</type>
</CustomField>