force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Last_History__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last History</label>
    <referenceTo>Negoptim__Assortment_PriceWaterFall__c</referenceTo>
    <relationshipName>History_Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>