force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_2NetIndex__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_2NetIndex__c</fullName>
    <label>New - 2Net Index</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>