force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_4NetPrice__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_4NetPrice__c</fullName>
    <formula>Negoptim__New_NetPrice_wTax__c * (1 - Negoptim__New_2NetIndex__c - Negoptim__New_3NetIndex__c - Negoptim__New_4NetIndex__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New 4NetPrice</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>