force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_DeadPrice__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_DeadPrice__c</fullName>
    <formula>Negoptim__New_NetPrice_wTax__c - 
(Negoptim__Product_UnitCharge1__c + Negoptim__Product_UnitCharge2__c + Negoptim__Product_UnitCharge3__c + Negoptim__Product_UnitCharge4__c + Negoptim__Product_UnitCharge5__c + Negoptim__Product_UnitCharge6__c + Negoptim__Product_UnitCharge7__c + Negoptim__Product_UnitCharge8__c + Negoptim__Product_UnitCharge9__c + Negoptim__Product_UnitCharge10__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New DeadPrice</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>