force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Disc_11_UType__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Disc_11_UType__c</fullName>
    <label>New Disc 11 UType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Unit_Fac</valueSetName>
    </valueSet>
</CustomField>