force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Disc_11_Val__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Disc_11_Val__c</fullName>
    <label>New Disc 11 Val</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>