force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Disc_12__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Disc_12__c</fullName>
    <label>New Disc 12</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>