force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Disc_12_Rank__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Disc_12_Rank__c</fullName>
    <label>New Disc 12 Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>