force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_NetPrice_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_NetPrice_Proforma__c</fullName>
    <label>New NetPrice Proforma</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>