force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_NetPrice_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_NetPrice_Taxes__c</fullName>
    <label>New NetPrice Taxes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>