force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_NetPrice_wo_Promo_woTax__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_NetPrice_wo_Promo_woTax__c</fullName>
    <formula>ROUND(Negoptim__New_CostPrice__c, IF(ISBLANK(TEXT(Negoptim__Assortment_BU__r.Negoptim__CostPrice_Rounding_Level__c)), 4, VALUE(TEXT(Negoptim__Assortment_BU__r.Negoptim__CostPrice_Rounding_Level__c))))
-(IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P1/&apos;), 0, Negoptim__New_Disc_1_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P2/&apos;), 0, Negoptim__New_Disc_2_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P3/&apos;), 0, Negoptim__New_Disc_3_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P4/&apos;), 0, Negoptim__New_Disc_4_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P5/&apos;), 0, Negoptim__New_Disc_5_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P6/&apos;), 0, Negoptim__New_Disc_6_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P7/&apos;), 0, Negoptim__New_Disc_7_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P8/&apos;), 0, Negoptim__New_Disc_8_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P9/&apos;), 0, Negoptim__New_Disc_9_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P10/&apos;), 0, Negoptim__New_Disc_10_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P11/&apos;), 0, Negoptim__New_Disc_11_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P12/&apos;), 0, Negoptim__New_Disc_12_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P13/&apos;), 0, Negoptim__New_Disc_13_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P14/&apos;), 0, Negoptim__New_Disc_14_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P15/&apos;), 0, Negoptim__New_Disc_15_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P16/&apos;), 0, Negoptim__New_Disc_16_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P17/&apos;), 0, Negoptim__New_Disc_17_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P18/&apos;), 0, Negoptim__New_Disc_18_Val__c)
+ IF(CONTAINS(Negoptim__New_Promo_Discounts__c, &apos;P19/&apos;), 0, Negoptim__New_Disc_19_Val__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New NetPrice wo Promo woTax</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>