force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_PCB__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_PCB__c</fullName>
    <label>New PCB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>