force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Tax_1__c</fullName>
    <label>New Tax 1</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>