force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__New_Type_perc_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Type_perc_Discounts__c</fullName>
    <label>New Type perc Discounts</label>
    <length>200</length>
    <type>Text</type>
</CustomField>