force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__PriceBeforePromoDisc__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PriceBeforePromoDisc__c</fullName>
    <label>Price Before Promo Disc</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>