force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Product__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>