force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Product_linked__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_linked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>linked_Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>