force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Promo_Event__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Promo_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo Event</label>
    <referenceTo>Negoptim__CommercialPlan__c</referenceTo>
    <relationshipName>Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>