force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Promo_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Promo_Event_Code__c</fullName>
    <label>Promo Event Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>