force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Promo_Event_Detail_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Promo_Event_Detail_BDate__c</fullName>
    <label>Promo Event Detail BDate</label>
    <type>Date</type>
</CustomField>