force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Release_Date__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>