force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Statement_PriceWaterfall__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Statement_PriceWaterfall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement PriceWaterFall</label>
    <referenceTo>Negoptim__Assortment_PriceWaterFall__c</referenceTo>
    <relationshipName>Statement_Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>