force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Request for Approval</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Previously Validated</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>