force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supplier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Product</label>
    <referenceTo>Negoptim__Supplier_PG_Mapping__c</referenceTo>
    <relationshipLabel>Assortment PriceWaterFalls</relationshipLabel>
    <relationshipName>Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>