force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Support_By__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Support_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Support By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assortment_PriceWaterFalls</relationshipName>
    <type>Lookup</type>
</CustomField>