force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Support_Date__c</fullName>
    <label>Last Support Date</label>
    <type>Date</type>
</CustomField>