force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Validation_Date__c</fullName>
    <label>Validation Date</label>
    <type>Date</type>
</CustomField>