force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__Version__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Version__c</fullName>
    <label>Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>