force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/fields/Negoptim__WithdrawalDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__WithdrawalDate__c</fullName>
    <label>Withdrawal Date</label>
    <type>DateTime</type>
</CustomField>