force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/recordTypes/Negoptim__Nego.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Nego</fullName>
    <active>true</active>
    <label>Nego</label>
</RecordType>