force-app/main/default/objects/Negoptim__Assortment_PriceWaterFall__c/recordTypes/Negoptim__Statement.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Statement</fullName>
    <active>true</active>
    <label>Statement</label>
</RecordType>